# steam-trading-helper

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  README.md  background.js  content-script.js  index.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  steam.d.ts  webpack.config.js
addon/: background.js  content.js  index.js  manifest.json  popup.css  popup.html  popup.js
lib/: buffer.js
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  main.rs
src/: background.js  content-script.js  index.js  lib.rs  manifest.json
src/addon/: manifest.json
src/lib/: browserUtils.js  utils.js
src/typings/: steam.d.ts
