[package]
name = "steam-trading-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlBodyElement",
]
[dependencies]
wasm-bindgen = "0.2.74"
